src/grammar/facParser.ts
// Generated from src/grammar/fac.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { facListener } from "./facListener";
import { facVisitor } from "./facVisitor";


export class facParser extends Parser {
	public static readonly DECL = 1;
	public static readonly DEFINE = 2;
	public static readonly INSTR = 3;
	public static readonly LW = 4;
	public static readonly SW = 5;
	public static readonly MULT = 6;
	public static readonly ADD = 7;
	public static readonly ADDI = 8;
	public static readonly SHR = 9;
	public static readonly SHL = 10;
	public static readonly JUMP = 11;
	public static readonly BEQ = 12;
	public static readonly BNEQ = 13;
	public static readonly OR = 14;
	public static readonly AND = 15;
	public static readonly XOR = 16;
	public static readonly NOT = 17;
	public static readonly NOP = 18;
	public static readonly DBG = 19;
	public static readonly REG = 20;
	public static readonly END = 21;
	public static readonly DOUBLE_COLON = 22;
	public static readonly COMMA = 23;
	public static readonly BO = 24;
	public static readonly BC = 25;
	public static readonly DOT = 26;
	public static readonly HASH = 27;
	public static readonly STRING = 28;
	public static readonly LETTERS = 29;
	public static readonly LETTER = 30;
	public static readonly NUMBER = 31;
	public static readonly NUM = 32;
	public static readonly COMMENT = 33;
	public static readonly WS = 34;
	public static readonly RULE_file = 0;
	public static readonly RULE_declerations = 1;
	public static readonly RULE_decleration = 2;
	public static readonly RULE_define = 3;
	public static readonly RULE_instructions = 4;
	public static readonly RULE_instruction = 5;
	public static readonly RULE_lw = 6;
	public static readonly RULE_sw = 7;
	public static readonly RULE_mult = 8;
	public static readonly RULE_add = 9;
	public static readonly RULE_addi = 10;
	public static readonly RULE_shr = 11;
	public static readonly RULE_shl = 12;
	public static readonly RULE_jump = 13;
	public static readonly RULE_beq = 14;
	public static readonly RULE_bneq = 15;
	public static readonly RULE_or = 16;
	public static readonly RULE_and = 17;
	public static readonly RULE_xor = 18;
	public static readonly RULE_not = 19;
	public static readonly RULE_label = 20;
	public static readonly RULE_nop = 21;
	public static readonly RULE_dbg = 22;
	public static readonly RULE_reference = 23;
	public static readonly RULE_input = 24;
	public static readonly RULE_number = 25;
	public static readonly RULE_string = 26;
	public static readonly RULE_register = 27;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "declerations", "decleration", "define", "instructions", "instruction", 
		"lw", "sw", "mult", "add", "addi", "shr", "shl", "jump", "beq", "bneq", 
		"or", "and", "xor", "not", "label", "nop", "dbg", "reference", "input", 
		"number", "string", "register",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.decl'", "'.define'", "'.instr'", "'lw'", "'sw'", "'mult'", 
		"'add'", "'addi'", "'shr'", "'shl'", "'j'", "'beq'", "'bneq'", "'or'", 
		"'and'", "'xor'", "'not'", "'nop'", "'dbg'", undefined, "';'", "':'", 
		"','", "'('", "')'", "'.'", "'#'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "DECL", "DEFINE", "INSTR", "LW", "SW", "MULT", "ADD", "ADDI", 
		"SHR", "SHL", "JUMP", "BEQ", "BNEQ", "OR", "AND", "XOR", "NOT", "NOP", 
		"DBG", "REG", "END", "DOUBLE_COLON", "COMMA", "BO", "BC", "DOT", "HASH", 
		"STRING", "LETTERS", "LETTER", "NUMBER", "NUM", "COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(facParser._LITERAL_NAMES, facParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return facParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "fac.g4"; }

	// @Override
	public get ruleNames(): string[] { return facParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return facParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(facParser._ATN, this);
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let _localctx: FileContext = new FileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, facParser.RULE_file);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.declerations();
			this.state = 57;
			this.instructions();
			this.state = 58;
			this.match(facParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declerations(): DeclerationsContext {
		let _localctx: DeclerationsContext = new DeclerationsContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, facParser.RULE_declerations);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 60;
			this.match(facParser.DECL);
			this.state = 64;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === facParser.DEFINE) {
				{
				{
				this.state = 61;
				this.decleration();
				}
				}
				this.state = 66;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decleration(): DeclerationContext {
		let _localctx: DeclerationContext = new DeclerationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, facParser.RULE_decleration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this.define();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public define(): DefineContext {
		let _localctx: DefineContext = new DefineContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, facParser.RULE_define);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 69;
			this.match(facParser.DEFINE);
			this.state = 70;
			_la = this._input.LA(1);
			if (!(_la === facParser.REG || _la === facParser.NUMBER)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 71;
			this.match(facParser.COMMA);
			this.state = 72;
			this.match(facParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instructions(): InstructionsContext {
		let _localctx: InstructionsContext = new InstructionsContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, facParser.RULE_instructions);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.match(facParser.INSTR);
			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << facParser.LW) | (1 << facParser.SW) | (1 << facParser.MULT) | (1 << facParser.ADD) | (1 << facParser.ADDI) | (1 << facParser.SHR) | (1 << facParser.SHL) | (1 << facParser.JUMP) | (1 << facParser.BEQ) | (1 << facParser.BNEQ) | (1 << facParser.OR) | (1 << facParser.AND) | (1 << facParser.XOR) | (1 << facParser.NOT) | (1 << facParser.NOP) | (1 << facParser.DBG) | (1 << facParser.HASH))) !== 0)) {
				{
				{
				this.state = 75;
				this.instruction();
				}
				}
				this.state = 80;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instruction(): InstructionContext {
		let _localctx: InstructionContext = new InstructionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, facParser.RULE_instruction);
		try {
			this.state = 98;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case facParser.LW:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 81;
				this.lw();
				}
				break;
			case facParser.SW:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 82;
				this.sw();
				}
				break;
			case facParser.MULT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 83;
				this.mult();
				}
				break;
			case facParser.ADD:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 84;
				this.add();
				}
				break;
			case facParser.ADDI:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 85;
				this.addi();
				}
				break;
			case facParser.SHR:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 86;
				this.shr();
				}
				break;
			case facParser.SHL:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 87;
				this.shl();
				}
				break;
			case facParser.JUMP:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 88;
				this.jump();
				}
				break;
			case facParser.BEQ:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 89;
				this.beq();
				}
				break;
			case facParser.BNEQ:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 90;
				this.bneq();
				}
				break;
			case facParser.OR:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 91;
				this.or();
				}
				break;
			case facParser.AND:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 92;
				this.and();
				}
				break;
			case facParser.XOR:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 93;
				this.xor();
				}
				break;
			case facParser.NOT:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 94;
				this.not();
				}
				break;
			case facParser.NOP:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 95;
				this.nop();
				}
				break;
			case facParser.DBG:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 96;
				this.dbg();
				}
				break;
			case facParser.HASH:
				this.enterOuterAlt(_localctx, 17);
				{
				this.state = 97;
				this.label();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lw(): LwContext {
		let _localctx: LwContext = new LwContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, facParser.RULE_lw);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(facParser.LW);
			this.state = 101;
			this.input();
			this.state = 102;
			this.match(facParser.COMMA);
			this.state = 103;
			this.input();
			this.state = 104;
			this.match(facParser.BO);
			this.state = 105;
			this.input();
			this.state = 106;
			this.match(facParser.BC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sw(): SwContext {
		let _localctx: SwContext = new SwContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, facParser.RULE_sw);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(facParser.SW);
			this.state = 109;
			this.input();
			this.state = 110;
			this.match(facParser.COMMA);
			this.state = 111;
			this.input();
			this.state = 112;
			this.match(facParser.BO);
			this.state = 113;
			this.input();
			this.state = 114;
			this.match(facParser.BC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public mult(): MultContext {
		let _localctx: MultContext = new MultContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, facParser.RULE_mult);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.match(facParser.MULT);
			this.state = 117;
			this.input();
			this.state = 118;
			this.match(facParser.COMMA);
			this.state = 119;
			this.input();
			this.state = 120;
			this.match(facParser.COMMA);
			this.state = 121;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public add(): AddContext {
		let _localctx: AddContext = new AddContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, facParser.RULE_add);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(facParser.ADD);
			this.state = 124;
			this.input();
			this.state = 125;
			this.match(facParser.COMMA);
			this.state = 126;
			this.input();
			this.state = 127;
			this.match(facParser.COMMA);
			this.state = 128;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public addi(): AddiContext {
		let _localctx: AddiContext = new AddiContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, facParser.RULE_addi);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.match(facParser.ADDI);
			this.state = 131;
			this.input();
			this.state = 132;
			this.match(facParser.COMMA);
			this.state = 133;
			this.input();
			this.state = 134;
			this.match(facParser.COMMA);
			this.state = 135;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public shr(): ShrContext {
		let _localctx: ShrContext = new ShrContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, facParser.RULE_shr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(facParser.SHR);
			this.state = 138;
			this.input();
			this.state = 139;
			this.match(facParser.COMMA);
			this.state = 140;
			this.input();
			this.state = 141;
			this.match(facParser.COMMA);
			this.state = 142;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public shl(): ShlContext {
		let _localctx: ShlContext = new ShlContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, facParser.RULE_shl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(facParser.SHL);
			this.state = 145;
			this.input();
			this.state = 146;
			this.match(facParser.COMMA);
			this.state = 147;
			this.input();
			this.state = 148;
			this.match(facParser.COMMA);
			this.state = 149;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public jump(): JumpContext {
		let _localctx: JumpContext = new JumpContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, facParser.RULE_jump);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(facParser.JUMP);
			this.state = 152;
			this.reference();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public beq(): BeqContext {
		let _localctx: BeqContext = new BeqContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, facParser.RULE_beq);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(facParser.BEQ);
			this.state = 155;
			this.input();
			this.state = 156;
			this.match(facParser.COMMA);
			this.state = 157;
			this.input();
			this.state = 158;
			this.match(facParser.COMMA);
			this.state = 159;
			this.reference();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public bneq(): BneqContext {
		let _localctx: BneqContext = new BneqContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, facParser.RULE_bneq);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 161;
			this.match(facParser.BNEQ);
			this.state = 162;
			this.input();
			this.state = 163;
			this.match(facParser.COMMA);
			this.state = 164;
			this.input();
			this.state = 165;
			this.match(facParser.COMMA);
			this.state = 166;
			this.reference();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public or(): OrContext {
		let _localctx: OrContext = new OrContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, facParser.RULE_or);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.match(facParser.OR);
			this.state = 169;
			this.input();
			this.state = 170;
			this.match(facParser.COMMA);
			this.state = 171;
			this.input();
			this.state = 172;
			this.match(facParser.COMMA);
			this.state = 173;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public and(): AndContext {
		let _localctx: AndContext = new AndContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, facParser.RULE_and);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 175;
			this.match(facParser.AND);
			this.state = 176;
			this.input();
			this.state = 177;
			this.match(facParser.COMMA);
			this.state = 178;
			this.input();
			this.state = 179;
			this.match(facParser.COMMA);
			this.state = 180;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public xor(): XorContext {
		let _localctx: XorContext = new XorContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, facParser.RULE_xor);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 182;
			this.match(facParser.XOR);
			this.state = 183;
			this.input();
			this.state = 184;
			this.match(facParser.COMMA);
			this.state = 185;
			this.input();
			this.state = 186;
			this.match(facParser.COMMA);
			this.state = 187;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public not(): NotContext {
		let _localctx: NotContext = new NotContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, facParser.RULE_not);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 189;
			this.match(facParser.NOT);
			this.state = 190;
			this.input();
			this.state = 191;
			this.match(facParser.COMMA);
			this.state = 192;
			this.input();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let _localctx: LabelContext = new LabelContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, facParser.RULE_label);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 194;
			this.match(facParser.HASH);
			this.state = 195;
			this.match(facParser.LETTERS);
			this.state = 196;
			this.match(facParser.DOUBLE_COLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public nop(): NopContext {
		let _localctx: NopContext = new NopContext(this._ctx, this.state);
		this.enterRule(_localctx, 42, facParser.RULE_nop);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 198;
			this.match(facParser.NOP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dbg(): DbgContext {
		let _localctx: DbgContext = new DbgContext(this._ctx, this.state);
		this.enterRule(_localctx, 44, facParser.RULE_dbg);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(facParser.DBG);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public reference(): ReferenceContext {
		let _localctx: ReferenceContext = new ReferenceContext(this._ctx, this.state);
		this.enterRule(_localctx, 46, facParser.RULE_reference);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 202;
			this.match(facParser.HASH);
			this.state = 203;
			this.match(facParser.LETTERS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public input(): InputContext {
		let _localctx: InputContext = new InputContext(this._ctx, this.state);
		this.enterRule(_localctx, 48, facParser.RULE_input);
		try {
			this.state = 208;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case facParser.REG:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 205;
				this.register();
				}
				break;
			case facParser.STRING:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 206;
				this.string();
				}
				break;
			case facParser.NUMBER:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 207;
				this.number();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public number(): NumberContext {
		let _localctx: NumberContext = new NumberContext(this._ctx, this.state);
		this.enterRule(_localctx, 50, facParser.RULE_number);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 210;
			this.match(facParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string(): StringContext {
		let _localctx: StringContext = new StringContext(this._ctx, this.state);
		this.enterRule(_localctx, 52, facParser.RULE_string);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 212;
			this.match(facParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public register(): RegisterContext {
		let _localctx: RegisterContext = new RegisterContext(this._ctx, this.state);
		this.enterRule(_localctx, 54, facParser.RULE_register);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 214;
			this.match(facParser.REG);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!facParser.__ATN) {
			facParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(facParser._serializedATN));
		}

		return facParser.__ATN;
	}

}

export class FileContext extends ParserRuleContext {
	public declerations(): DeclerationsContext {
		return this.getRuleContext(0, DeclerationsContext);
	}
	public instructions(): InstructionsContext {
		return this.getRuleContext(0, InstructionsContext);
	}
	public EOF(): TerminalNode { return this.getToken(facParser.EOF, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return facParser.RULE_file; }
	// @Override
	public enterRule(listener: facListener): void {
		if (listener.enterFile) {
			listener.enterFile(this);
		}
	}
	// @Override
	public exitRule(listener: facListener): void {
		if (listener.exitFile) {
			listener.exitFile(this);
		}
	}
	// @Override
	public accept<Result>(visitor: facVisitor<Result>): Result {
		if (visitor.visitFile) {
			return visitor.visitFile(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

